# assessment_app

./: README.md  db.sqlite3  environment_construction.sh  manage.py  pyproject.toml
assessment_site/: asgi.py  settings.py  urls.py  wsgi.py
estimator/: views.py
estimator/templates/estimator/: estimate.html
