[tool.poetry]
package-mode = false

[project]
name = "assessment-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kawabuchieirin"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django>=5.2.1,<6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
